userservice test partially done